# cardinal

./: AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEN_AI_POLICY.md  PRIVACY.md  README.md
.github/: FUNDING.yml
.github/workflows/: build_android.yml  detekt.yml  release.yml
cardinal-android/: .gitignore  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
cardinal-android/app/: build.gradle.kts  detekt.yml  license.template
cardinal-android/app/src/debug/res/values/: strings.xml
cardinal-android/app/src/main/: AndroidManifest.xml
cardinal-android/app/src/main/assets/: basemap.mbtiles  landcover.mbtiles  style.json  style_dark.json  style_light.json  terrain.mbtiles
cardinal-android/app/src/main/res/drawable/: cardinal_icon.xml  cloud_download_24dp.xml  commute_icon.xml  ic_accessiblity_settings.xml  ic_add.xml  ic_add_location.xml  ic_arrow_back.xml  ic_arrow_down.xml  ic_arrow_forward.xml  ic_bookmark_star.xml  ic_bus_railway.xml  ic_clear_selection.xml  ic_close.xml  ic_content_cut.xml  ic_content_paste.xml  ic_delete.xml  ic_directions.xml  ic_drag_handle.xml  ic_edit.xml  ic_heart.xml  ic_heart_minus.xml  ic_home.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_list.xml  ic_location_on.xml  ic_menu.xml  ic_move.xml  ic_nearby.xml  ic_new_list.xml  ic_offline.xml  ic_refresh.xml  ic_save.xml  ic_search.xml  ic_select_all.xml  ic_settings.xml  ic_star.xml  ic_stars_dark.xml  ic_stars_light.xml  ic_subway_walk.xml  (+14 more)
cardinal-android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
cardinal-android/app/src/main/res/values/: colors.xml  dimensions.xml  ic_launcher_background.xml  (+5 more)
cardinal-android/gradle/: libs.versions.toml
cardinal-android/gradle/wrapper/: gradle-wrapper.properties
cardinal-geocoder/: COPYING.md  Cargo.toml  build.sh
cardinal-geocoder/src/: error.rs  index.rs  lib.rs  poi.rs
(+186 files in other folders)
