[workspace]
resolver = "3"

members = ["cardinal-geocoder"]

[workspace.dependencies]
levenshtein_automata = "0.2.1"
s2 = "0.0.13"
serde_json = "1.0"
serde = "1.0"
deunicode = "1.4.3"
lazy_static = "1.5"
regex = "1.11"
geo = "0.30.0"
anyhow = "1.0"
thiserror = "1.0"
mvt-reader = "2.1.0"
tantivy = "0.24.2"
uniffi = "0.29.4"
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"
