[package]
name = "cardinal-geocoder"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"

[dependencies]
levenshtein_automata = "0.2.1"
s2 = "0.0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
deunicode = "1.4.3"
lazy_static = "1.5"
regex = "1.11"
geo = "0.30.0"
anyhow = "1.0"
thiserror = "1.0"
mvt-reader = "2.1.0"
tantivy = "0.24.2"
uniffi = { version = "0.29.4", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }

[profile.release]
lto = true
